@@ -15,6 +15,8 @@
     - error messages of the command line tool redirected to stderr
       while everything else - to stdout to comply with the common practice
     - fixed the progress indicator overflow; now it should never go over 100%
+    - added option to specify a custom cluster map background color
+      (free-space color)
 
     - the following translations were added:
 
